--- a/FHE_Circuit_Debugger/notebook.ipynb
+++ b/FHE_Circuit_Debugger/notebook.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:01:55.835071Z",
-     "start_time": "2025-09-01T04:01:55.832536Z"
+     "end_time": "2025-09-02T22:01:37.440587Z",
+     "start_time": "2025-09-02T22:01:37.436743Z"
     }
    },
    "cell_type": "code",
@@ -16,8 +16,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:31:46.357134Z",
-     "start_time": "2025-09-01T04:31:46.352443Z"
+     "end_time": "2025-09-02T22:01:37.454557Z",
+     "start_time": "2025-09-02T22:01:37.446243Z"
     }
    },
    "cell_type": "code",
@@ -99,13 +99,13 @@
    ],
    "id": "84b5a1635d85eb52",
    "outputs": [],
-   "execution_count": 92
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:17:15.386665Z",
-     "start_time": "2025-09-01T04:17:15.384320Z"
+     "end_time": "2025-09-02T22:01:37.463595Z",
+     "start_time": "2025-09-02T22:01:37.459676Z"
     }
    },
    "cell_type": "code",
@@ -140,13 +140,13 @@
    ],
    "id": "7ad0127258fac3e0",
    "outputs": [],
-   "execution_count": 68
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:17:15.619364Z",
-     "start_time": "2025-09-01T04:17:15.617321Z"
+     "end_time": "2025-09-02T22:01:37.472217Z",
+     "start_time": "2025-09-02T22:01:37.468633Z"
     }
    },
    "cell_type": "code",
@@ -172,13 +172,13 @@
    ],
    "id": "fbc121e30a2defb3",
    "outputs": [],
-   "execution_count": 69
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:17:15.807748Z",
-     "start_time": "2025-09-01T04:17:15.805817Z"
+     "end_time": "2025-09-02T22:01:37.480631Z",
+     "start_time": "2025-09-02T22:01:37.477513Z"
     }
    },
    "cell_type": "code",
@@ -204,13 +204,13 @@
    ],
    "id": "bb1dfb48946291a4",
    "outputs": [],
-   "execution_count": 70
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:17:15.963547Z",
-     "start_time": "2025-09-01T04:17:15.961542Z"
+     "end_time": "2025-09-02T22:01:37.489623Z",
+     "start_time": "2025-09-02T22:01:37.486378Z"
     }
    },
    "cell_type": "code",
@@ -237,13 +237,13 @@
      ]
     }
    ],
-   "execution_count": 71
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:17:16.228369Z",
-     "start_time": "2025-09-01T04:17:16.226680Z"
+     "end_time": "2025-09-02T22:01:37.503961Z",
+     "start_time": "2025-09-02T22:01:37.501259Z"
     }
    },
    "cell_type": "code",
@@ -254,13 +254,13 @@
    ],
    "id": "e1e030cc9c2247c4",
    "outputs": [],
-   "execution_count": 72
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:17:16.595371Z",
-     "start_time": "2025-09-01T04:17:16.593502Z"
+     "end_time": "2025-09-02T22:01:37.516505Z",
+     "start_time": "2025-09-02T22:01:37.513012Z"
     }
    },
    "cell_type": "code",
@@ -278,13 +278,13 @@
    ],
    "id": "11c0c51d118801ba",
    "outputs": [],
-   "execution_count": 73
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:17:16.747962Z",
-     "start_time": "2025-09-01T04:17:16.745827Z"
+     "end_time": "2025-09-02T22:01:37.524629Z",
+     "start_time": "2025-09-02T22:01:37.521111Z"
     }
    },
    "cell_type": "code",
@@ -294,29 +294,28 @@
     "    carry = [0] * (size + 1)\n",
     "    temp = [0] * size\n",
     "    a_and_b = [0] * size\n",
-    "    \n",
+    "\n",
     "    e_xor(a, b, temp)\n",
     "    e_and(a, b, a_and_b)\n",
-    "    \n",
+    "\n",
     "    for i in range(size):\n",
     "        result[i] = e_xor_bit(carry[i], temp[i])\n",
-    "        \n",
+    "\n",
     "        if i != size - 1:\n",
     "            a_and_carry = e_and_bit(a[i], b[i])\n",
     "            b_and_carry = e_and_bit(b[i], carry[i])\n",
     "            temp_carry = e_or_bit(a_and_b[i], a_and_carry)\n",
-    "            carry[i+1] = e_or_bit(temp_carry, b_and_carry)\n",
-    "            "
+    "            carry[i+1] = e_or_bit(temp_carry, b_and_carry)\n"
    ],
    "id": "b3cb623f46d6fb14",
    "outputs": [],
-   "execution_count": 74
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:17:16.927403Z",
-     "start_time": "2025-09-01T04:17:16.925395Z"
+     "end_time": "2025-09-02T22:01:37.534318Z",
+     "start_time": "2025-09-02T22:01:37.530879Z"
     }
    },
    "cell_type": "code",
@@ -343,13 +342,13 @@
      ]
     }
    ],
-   "execution_count": 75
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:17:17.126398Z",
-     "start_time": "2025-09-01T04:17:17.124588Z"
+     "end_time": "2025-09-02T22:01:37.560742Z",
+     "start_time": "2025-09-02T22:01:37.556860Z"
     }
    },
    "cell_type": "code",
@@ -376,13 +375,13 @@
      ]
     }
    ],
-   "execution_count": 76
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:17:17.323203Z",
-     "start_time": "2025-09-01T04:17:17.320891Z"
+     "end_time": "2025-09-02T22:01:37.577757Z",
+     "start_time": "2025-09-02T22:01:37.573347Z"
     }
    },
    "cell_type": "code",
@@ -393,17 +392,17 @@
     "    temp_0 = [0] * size\n",
     "    temp_1 = [0] * size\n",
     "    temp_2 = [0] * size\n",
-    "    \n",
+    "\n",
     "    result[0] = e_xor_bit(a[0], b[0])\n",
     "    temp_0[0] = e_not_bit(a[0])\n",
     "    borrow[0] = e_and_bit(temp_0[0], b[0])\n",
-    "    \n",
+    "\n",
     "    e_xor_range(a, b, temp_0, 1, size)\n",
     "    e_not_range(a, temp_1, 1, size)\n",
-    "    \n",
+    "\n",
     "    for i in range(1, size):\n",
     "        result[i] = e_xor_bit(temp_0[i], borrow[i-1])\n",
-    "        \n",
+    "\n",
     "        if i != size - 1:\n",
     "            temp_2[i] = e_and_bit(temp_1[i], b[i])\n",
     "            temp_0[i] = e_not_bit(temp_0[i])\n",
@@ -412,13 +411,13 @@
    ],
    "id": "ca5824f44e421d26",
    "outputs": [],
-   "execution_count": 77
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:17:18.113005Z",
-     "start_time": "2025-09-01T04:17:18.110927Z"
+     "end_time": "2025-09-02T22:01:37.592223Z",
+     "start_time": "2025-09-02T22:01:37.588322Z"
     }
    },
    "cell_type": "code",
@@ -445,17 +444,145 @@
      ]
     }
    ],
-   "execution_count": 78
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:33:22.080464Z",
-     "start_time": "2025-09-01T04:33:22.078326Z"
+     "end_time": "2025-09-02T22:04:28.891590Z",
+     "start_time": "2025-09-02T22:04:28.884993Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "def sign_divider(a, b, result):\n",
+    "    size = len(a)\n",
+    "    # Determine signs and convert to positive (two's complement magnitude)\n",
+    "    sign_a = a[size-1]  # Sign bit of dividend\n",
+    "    sign_b = b[size-1]  # Sign bit of divisor\n",
+    "    quotient_sign = sign_a ^ sign_b  # XOR for quotient sign\n",
+    "\n",
+    "    # Convert to positive numbers if negative\n",
+    "    Q = a.copy()\n",
+    "    M = b.copy()\n",
+    "    if sign_a == 1:  # If dividend is negative, take two's complement\n",
+    "        Q = twos_complement(Q)\n",
+    "    if sign_b == 1:  # If divisor is negative, take two's complement\n",
+    "        M = twos_complement(M)\n",
+    "\n",
+    "    # Initialize registers\n",
+    "    A = [0] * size  # Accumulator\n",
+    "    A_m = [0] * size  # Accumulator\n",
+    "    zero = [0] * size  # Accumulator\n",
+    "\n",
+    "    M_neg = twos_complement(M)  # Negative of divisor\n",
+    "    Q_tmp = [0] * size\n",
+    "    A_tmp = [0] * size\n",
+    "\n",
+    "    # Non-restoring division\n",
+    "    for i in range(size):\n",
+    "        Q_tmp = e_shl_p(Q, zero)\n",
+    "        MSB = Q[size-1]\n",
+    "        Q = Q_tmp\n",
+    "        A_tmp = e_shl_p(A, MSB)\n",
+    "        subtractor(A_tmp, M, A)\n",
+    "        A_msb = A[size-1]\n",
+    "        not_A_msb = e_not_bit(A_msb)\n",
+    "        Q[0] = not_A_msb\n",
+    "        if i != size - 1:\n",
+    "            adder_c(A, M, A_m)\n",
+    "            e_mux(A_msb, A_m, A, A_tmp)\n",
+    "            A = A_tmp\n",
+    "\n",
+    "    # Adjust quotient sign\n",
+    "    if quotient_sign == 1:\n",
+    "        Q = twos_complement(Q)\n",
+    "\n",
+    "    # Copy quotient to result\n",
+    "    for i in range(size):\n",
+    "        result[i] = Q[i]\n",
+    "\n",
+    "# Helper functions (assumed to exist, but fixed for clarity)\n",
+    "def twos_complement(bits):\n",
+    "    size = len(bits)\n",
+    "    # Invert bits\n",
+    "    inverted = [1 if bit == 0 else 0 for bit in bits]\n",
+    "    # Add 1\n",
+    "    result = [0] * size\n",
+    "    carry = 1\n",
+    "    for i in range(size):\n",
+    "        sum_bits = inverted[i] + carry\n",
+    "        result[i] = sum_bits % 2\n",
+    "        carry = sum_bits // 2\n",
+    "    return result\n",
+    "\n",
+    "def adder(a, b, result):\n",
+    "    size = len(a)\n",
+    "    carry = 0\n",
+    "    for i in range(size):\n",
+    "        sum_bits = a[i] + b[i] + carry\n",
+    "        result[i] = sum_bits % 2\n",
+    "        carry = sum_bits // 2"
+   ],
+   "id": "da40382158b85f1a",
+   "outputs": [],
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-02T22:05:00.277635Z",
+     "start_time": "2025-09-02T22:05:00.273740Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "a = int_to_bits(37,  bit_length=8)\n",
+    "b = int_to_bits(-36, bit_length=8)\n",
+    "print(a[::-1])\n",
+    "print(b[::-1])\n",
+    "res = [0] * 8\n",
+    "sign_divider(a, b, res)\n",
+    "print(res[::-1])\n",
+    "print(bits_to_int(res))"
+   ],
+   "id": "f92a5e8ca72bce9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 0, 0, 1, 0, 1]\n",
+      "[1, 1, 0, 1, 1, 1, 0, 0]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-02T22:01:37.660770Z",
+     "start_time": "2025-09-02T22:01:37.655373Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def twos_complement(bits):\n",
+    "    size = len(bits)\n",
+    "    # Invert bits\n",
+    "    inverted = [1 if bit == 0 else 0 for bit in bits]\n",
+    "    # Add 1\n",
+    "    result = [0] * size\n",
+    "    carry = 1\n",
+    "    for i in range(size):\n",
+    "        sum_bits = inverted[i] + carry\n",
+    "        result[i] = sum_bits % 2\n",
+    "        carry = sum_bits // 2\n",
+    "    return result\n",
+    "\n",
     "def divider(a, b, result):\n",
     "    size = len(a)\n",
     "    Q = a\n",
@@ -468,40 +595,40 @@
     "    A_tmp = [0] * size\n",
     "    Q_tmp = [0] * size\n",
     "    A_m = [0] * size\n",
-    "    \n",
-    "    for _ in range(size):\n",
+    "    sign = e_xor_bit(a[size-1], b[size-1])\n",
+    "    for i in range(size):\n",
     "        Q_tmp = e_shl_p(Q, zero)\n",
     "        MSB = Q[size-1]\n",
     "        Q = Q_tmp\n",
-    "        print(\"\\t\\tQ1:\", Q)\n",
     "        A_tmp = e_shl_p(A, MSB)\n",
     "        subtractor(A_tmp, M, A)\n",
     "        A_msb = A[size-1]\n",
     "        not_A_msb = e_not_bit(A_msb)\n",
     "        Q[0] = not_A_msb\n",
-    "        print(\"\\t\\tQ2:\", Q)\n",
-    "        adder_rs(A, M, A_m)\n",
-    "        e_mux(A_msb, A_m, A, A_tmp)\n",
-    "        A = A_tmp\n",
-    "        \n",
+    "        if i != size - 1:\n",
+    "            adder_c(A, M, A_m)\n",
+    "            e_mux(A_msb, A_m, A, A_tmp)\n",
+    "            A = A_tmp\n",
+    "\n",
+    "\n",
     "    for i in range(size):\n",
     "        result[i] = Q[i]"
    ],
-   "id": "da40382158b85f1a",
+   "id": "395853d1cbeb01b0",
    "outputs": [],
-   "execution_count": 95
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:33:22.381127Z",
-     "start_time": "2025-09-01T04:33:22.378634Z"
+     "end_time": "2025-09-02T22:01:54.517853Z",
+     "start_time": "2025-09-02T22:01:54.510301Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "a = int_to_bits(8,  bit_length=8)\n",
-    "b = int_to_bits(2, bit_length=8)\n",
+    "a = int_to_bits(20,  bit_length=8)\n",
+    "b = int_to_bits(3, bit_length=8)\n",
     "print(a[::-1])\n",
     "print(b[::-1])\n",
     "res = [0] * 8\n",
@@ -509,49 +636,33 @@
     "print(res[::-1])\n",
     "print(bits_to_int(res))"
    ],
-   "id": "f92a5e8ca72bce9",
+   "id": "fb19c4d1f0d658df",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 0, 1, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 1, 0]\n",
-      "\t\tQ1: [0, 0, 0, 1, 0, 0, 0, 0]\n",
-      "\t\tQ2: [0, 0, 0, 1, 0, 0, 0, 0]\n",
-      "\t\tQ1: [0, 0, 1, 0, 0, 0, 0, 0]\n",
-      "\t\tQ2: [0, 0, 1, 0, 0, 0, 0, 0]\n",
-      "\t\tQ1: [0, 1, 0, 0, 0, 0, 0, 0]\n",
-      "\t\tQ2: [0, 1, 0, 0, 0, 0, 0, 0]\n",
-      "\t\tQ1: [1, 0, 0, 0, 0, 0, 0, 0]\n",
-      "\t\tQ2: [1, 0, 0, 0, 0, 0, 0, 0]\n",
-      "\t\tQ1: [0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "\t\tQ2: [0, 0, 0, 0, 0, 0, 0, 1]\n",
-      "\t\tQ1: [0, 0, 0, 0, 0, 0, 1, 0]\n",
-      "\t\tQ2: [0, 0, 0, 0, 0, 0, 1, 1]\n",
-      "\t\tQ1: [0, 0, 0, 0, 0, 1, 1, 0]\n",
-      "\t\tQ2: [0, 0, 0, 0, 0, 1, 1, 1]\n",
-      "\t\tQ1: [0, 0, 0, 0, 1, 1, 1, 0]\n",
-      "\t\tQ2: [0, 0, 0, 0, 1, 1, 1, 1]\n",
-      "[0, 0, 0, 0, 1, 1, 1, 1]\n",
-      "15\n"
+      "[0, 0, 0, 1, 0, 1, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 1, 1]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 0]\n",
+      "6\n"
      ]
     }
    ],
-   "execution_count": 96
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-01T04:01:56.001545Z",
-     "start_time": "2025-09-01T04:01:56.000368Z"
+     "end_time": "2025-09-02T22:01:37.687836Z",
+     "start_time": "2025-09-02T22:01:37.685850Z"
     }
    },
    "cell_type": "code",
    "source": "",
-   "id": "ffe64471314b5cc7",
+   "id": "ed5241771d474c30",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": null
   }
  ],
  "metadata": {
